# rsvp-automation

./: .commitlintrc.json  .env  .env.example  .gitignore  .mcp.json  .release-please-config.json  CLAUDE.md  HANDOFF.md  PROGRESS.md  README.md  ROADMAP.md  TASKS.md  contactscout.html  contactscout_v02.html  index.html  inviteflow.html  inviteflow_v02.html  lint-staged.config.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.agents/instructions/: documentation-maintenance-debt.instructions.md  global-dot-figures.instructions.md  next-steps-provenance.instructions.md
.claude/: launch.json  settings.local.json
config/: default.json  example_configs.json  sample_config_sheet.json
data/: README.md  form_responses.csv  sample_invitees.csv  sample_invitees_sheet.json  sample_invitees_with_links.csv  sample_preview.html
docs/: DESIGN.md  GCC-OUT-FIX.md  GCC-OUT-IMPLEMENTATION.md  GCC-OUT-SPEC.md  GOOGLE_SHEETS_SETUP.md  HANDOFF.md  PROGRESS.md  QUICKSTART.md  RESEND-INTEGRATION.md  REUSABLE.md  ROADMAP.md  TASKS.md  VIP Elected Officials - Useful Links.md  proj-structure.txt  workflow_instructions.md
gas/: Code.gs
html/: test_template.html
old-library/: inviteflow_v2.html
redesign-scaffold/: CLAUDE_CODE_HANDOFF.md  roster.jsx  shared.jsx
scripts/: README.md  copy-static.js  general_user_workflow.gs  generateRSVPLinks.gs  inject-version.js  sendInvites.gs  utilities.gs  vip_workflow.gs
src/: index.css  vite-env.d.ts
ui/: README.md  app.py  config_manager.py  launch.py  secrets_manager.py  template_maker.py
(+147 files in other folders)
