[project]
name = "automate-invite-emails"
version = "0.1.0"
description = "Reusable invite and RSVP automation for event invitations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["automate_invite_emails*"]
