[project]
name = "automate-invite-emails"
version = "0.1.0"
description = "Reusable invite and RSVP automation for event invitations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "gspread>=6.0.0",
    "google-auth-oauthlib>=1.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["automate_invite_emails*"]